--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>KOtlin Neural Networks implemented AgaiN</name>
-    <description>A kotlin based deep learning framework inspired by pytorch and keras</description>
+    <name>Konnan</name>
+    <description>Machine learning framework for Kotlin</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
