Configurable initializers, optimizer bugfix, gradient normalizer, Example PPO implementation

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>3.8.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>eu.redbean.kten</groupId>
             <artifactId>kten-testing</artifactId>
             <version>0.1.0-SNAPSHOT</version>
